<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProductViewActivity">
    <ImageView
        android:id="@+id/imageProduct"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/product_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/editTextProductName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:hint="@string/product_name"
        app:layout_constraintTop_toBottomOf="@id/imageProduct"
        app:layout_constraintStart_toStartOf="@id/imageProduct"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/editTextProductPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:hint="@string/product_price"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/editTextProductName"
        app:layout_constraintStart_toStartOf="@id/editTextProductName"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/switchProductAvailability"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_availability"
        app:layout_constraintTop_toBottomOf="@id/editTextProductPrice"
        app:layout_constraintStart_toStartOf="@id/editTextProductPrice"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/editTextProductDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/product_description"
        android:inputType="textMultiLine"
        android:minLines="4"
        android:maxLines="10"
        android:textSize="20dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/switchProductAvailability"
        app:layout_constraintStart_toStartOf="@id/switchProductAvailability"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp" />
    <TextView
        android:id="@+id/buildingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextProductDescription"
        app:layout_constraintStart_toStartOf="@id/editTextProductDescription"
        android:layout_marginTop="8dp"
        android:textSize="20dp"
        android:text="@string/building_hint"/>
    <TextView
        android:id="@+id/BuildingField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/editTextProductDescription"
        app:layout_constraintStart_toEndOf="@id/buildingText"
        app:layout_constraintEnd_toEndOf="@id/editTextProductDescription"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/sellerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seller_hint"
        app:layout_constraintTop_toBottomOf="@id/buildingText"
        app:layout_constraintStart_toStartOf="@id/buildingText"
        android:layout_marginTop="8dp"
        android:textSize="20dp"/>
    <TextView
        android:id="@+id/sellerfield"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@id/sellerText"
        app:layout_constraintTop_toTopOf="@id/sellerText"
        app:layout_constraintEnd_toEndOf="@id/editTextProductDescription"/>
    <TextView
        android:id="@+id/contactText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_hint"
        app:layout_constraintStart_toStartOf="@id/sellerText"
        app:layout_constraintTop_toBottomOf="@id/sellerText"
        android:layout_marginTop="8dp"
        android:textSize="20dp"/>
    <TextView
        android:id="@+id/contactfield"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@id/contactText"
        app:layout_constraintTop_toBottomOf="@id/contactText"
        app:layout_constraintEnd_toEndOf="@id/editTextProductPrice"
        android:layout_marginTop="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>